<resources>
    <string name="app_name">Fit</string>
    <string name="welcomeText">Have a nice training!</string>
    <string name="reg_mainText">Sign Up as a Sportsman</string>
    <string name="reg_name">First name</string>
    <string name="reg_secondName">Surname</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_password">Password</string>
    <string name="password_help">At least 6 characters</string>
    <string name="reg_secondPassword">Repeat your password</string>
    <string name="reg_submit">Sign Up</string>
    <string name="reg_log"><u>I already have an account</u></string>
    <string name="signin_text">Enter your username and password</string>
    <string name="signin_submit">Sign In</string>
    <string name="signin_up"><u>Sign Up</u></string>
    <string name="reg_autoSave">Remember me</string>
    <string name="err_emptyString">This field can not be empty</string>
    <string name="err_wrongPassword">Wrong passowrd</string>
    <string name="err_notCheckedPass">Incorrect password</string>
    <string name="err_notCheckedEmail">Incorrect email</string>
    <string name="err_authFail">Incorrect user</string>
    <string name="err_notConnection">It seems like our servers are currently offline</string>
    <string name="err_differentPass">Passwords do not match</string>
    <string name="err_badName">Name can not contain spaces</string>
    <string name="err_notInternet">No connection to the Internet</string>
    <string name="err_emptyReview">Please comment on the review</string>
    <string name="ok">OK</string>
    <string name="hint_occupied">The email is already in use.</string>
    <string name="hint_contacts">Thank you for the request! The answer will be sent to your email.</string>
    <string name="hint_success">Thank you for signing up! The verification letter was sent to your email. Open the link in the letter in order to start using our app.</string>
    <string name="hint_rerun">Verify your email</string>
    <string name="err_notConfirmed">Verify your email</string>

    <string name="side_contacts">Contacts</string>
    <string name="side_profile">Profile</string>
    <string name="side_trainers">Trainers</string>
    <string name="side_exercises">Exercises</string>
    <string name="side_news">News</string>
    <string name="side_help">Support</string>
    <string name="side_settings">Settings</string>

    <string name="bottom_chats">Chats</string>
    <string name="bottom_targets">Aims</string>
    <string name="bottom_diary">Diary</string>
    <string name="icon">icon</string>
    <string name="header_edit">Edit</string>
    <string name="helpText">Popular questions</string>
    <string name="exercise_complexity">Complexity:</string>
    <string name="trainer_reviews">Reviews:</string>

    <string name="profile_weight">Weight</string>
    <string name="profile_weight_measure">kg</string>
    <string name="profile_power">Body type</string>
    <string name="profile_experience">Experience</string>
    <string name="profile_age">Age</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_med">Medical condition</string>
    <string name="profile_about">О себе</string>

    <string name="trainer_profile_experience">Опыт</string>
    <string name="trainer_profile_rating">Рейтинг</string>
    <string name="trainer_profile_review">Отзывы</string>
    <string name="trainer_profile_age">Возраст</string>
    <string name="trainer_profile_email">E-mail</string>
    <string name="trainer_profile_phone">Телефон</string>
    <string name="trainer_profile_to_write">Написать</string>
    <string name="trainer_profile_to_write_review">Оставить отзыв</string>
    <string name="trainer_profile_about">О себе</string>

    <string name="fragment_contacts">Contacts</string>
    <string name="contacts_them">Type a topic of the question…</string>
    <string name="contacts_send_button">Send</string>
    <string name="contacts_text">Or contact us via email:\n<b>sportsapp@app.ru</b></string>

    <string name="settings_switch">Turn notifications on</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_data">Who can see my hidden information</string>
    <string name="settings_select_sound">Pick a sound</string>
    <string name="read_more">Read more…</string>
    <string name="importance">Importance</string>
    <string name="performed">Progress:</string>
    <!--    TODO: Посмотреть к чему это относится и перевести-->
    <string name="training">Тренировки по плану:</string>
    <string name="spent">Spent time:</string>

    <string name="material_calendar_monday">Mon.</string>
    <string name="material_calendar_tuesday">Tue.</string>
    <string name="material_calendar_wednesday">Wed.</string>
    <string name="material_calendar_thursday">Thu.</string>
    <string name="material_calendar_friday">Fri.</string>
    <string name="material_calendar_saturday">Sat.</string>
    <string name="material_calendar_sunday">Sun.</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>

    <string name="ask">Ask a question…</string>
    <string name="all_users">All users</string>
    <string name="only_I">Only I</string>
    <string name="selected">Selectively</string>
    <string name="select_users">Pick a user</string>
    <string name="selected_chat">Selected chat</string>
    <string name="copy_link">Share</string>
    <string name="signup_trainer">Sign Up as a Trainer</string>
    <string name="reg_via">Sing Up</string>
    <string name="via_mail">Via Email</string>
    <string name="via_phone">Via Phone</string>
    <string name="type_your_phone">Type your phone number</string>
    <string name="type_your_email">Type your Email</string>
    <string name="next">Next</string>
    <string name="code">Code</string>
    <string name="HaveNotReceivedTheCode">Have not received the code?</string>
    <string name="HaveNotReceivedTheMessage">Have not received the message?</string>
    <string name="incorrect_number">Incorrect phone number</string>
    <string name="codeSent">Confirmation code has been sent again</string>
    <string name="mailSent">Confirmation letter has been sent again</string>

    <array name="year_type">
        <item>лет</item>
        <item>год</item>
        <item>года</item>
    </array>

    <string name="add_review">Введите ваш отзыв…</string>
    <string name="editName">Введите имя</string>
    <string name="editSecondName">Введите фамилию</string>
    <string name="profile_gender">Пол</string>
    <string name="profile_birthday">Дата рождения</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="writeMessage">Написать сообщение…</string>
    <string name="about_application"><u>About application</u></string>
    <string name="version">Version 0.1.0</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="terms_of_use"><u>Terms of use</u></string>

    <string-array name="power_type">
        <item>Не выбрано</item>
        <item>Эктоморф</item>
        <item>Мезоморф</item>
        <item>Эндоморф</item>
    </string-array>

</resources>
