<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/side_profile"
        android:title="@string/side_profile"
        android:icon="@drawable/ic_sm_profile"/>
    <item
        android:id="@+id/side_trainers"
        android:title="@string/side_trainers"
        android:icon="@drawable/ic_sm_trainers"/>
    <item
        android:id="@+id/side_exercises"
        android:title="@string/side_exercises"
        android:icon="@drawable/ic_sm_exercises"/>
    <item
        android:id="@+id/side_news"
        android:title="@string/side_news"
        android:icon="@drawable/ic_sm_news"/>
    <item
        android:id="@+id/side_help"
        android:title="@string/side_help"
        android:icon="@drawable/ic_sm_help"/>
    <item
        android:id="@+id/side_settings"
        android:title="@string/side_settings"
        android:icon="@drawable/ic_sm_settings"/>
    <item
        android:id="@+id/side_contacts"
        android:title="@string/side_contacts"
        android:icon="@drawable/ic_sm_contacts"/>
</menu>