<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.TypeSignUpActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/reg_via"
        android:textColor="@color/textBlack"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnViaMail"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/via_mail"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_sm_contacts_green"

        style="?attr/materialButtonOutlinedStyle"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:id="@+id/btnViaMail"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/via_phone"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_phone_black_24dp"

        style="?attr/materialButtonOutlinedStyle"
        android:textSize="16sp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btnViaMail"
        android:id="@+id/btnViaPhone"/>
</RelativeLayout>